@@ -23,6 +23,8 @@ Post-v3.6.0
      * Added a new sub-command, ovs/route/rule/show, to list OVS router rules.
      * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
        add/delete a route from a specific OVS table.
+     * 'ovs/route/lookup': added new option, src=IP, to perform lookup with
+       a specific source IP address.
 
 
 v3.6.0 - 18 Aug 2025
